chore: use correct year template for license