@@ -1,7 +1,8 @@
 /*
- * SPDX-FileCopyrightText: 2022 Atos, 2023-2024 Lifely
+ * SPDX-FileCopyrightText: 2021 Atos
  * SPDX-License-Identifier: EUPL-1.2+
  */
+
 package net.atos.zac.authentication;
 
 import java.io.Serial;
@@ -16,7 +17,8 @@ import jakarta.servlet.http.HttpSession;
 
 public class SecurityUtil implements Serializable {
 
-    @Serial private static final long serialVersionUID = 654714651976511004L;
+    @Serial
+    private static final long serialVersionUID = 654714651976511004L;
 
     /**
      * Constant which indicates in which {@link HttpSession} attribute the current authenticated {@link LoggedInUser} can be found.
@@ -24,16 +26,12 @@ public class SecurityUtil implements Serializable {
     public static final String LOGGED_IN_USER_SESSION_ATTRIBUTE = "logged-in-user";
 
     public static final LoggedInUser FUNCTIONEEL_GEBRUIKER =
-            new LoggedInUser(
-                    "FG",
-                    "",
-                    "Functionele gebruiker",
-                    "Functionele gebruiker",
-                    null,
-                    Set.of("functionele_gebruiker"),
-                    Collections.emptySet());
+            new LoggedInUser("FG", "", "Functionele gebruiker", "Functionele gebruiker", null,
+                    Set.of("functionele_gebruiker"), Collections.emptySet());
 
-    @Inject @ActiveSession private Instance<HttpSession> httpSession;
+    @Inject
+    @ActiveSession
+    private Instance<HttpSession> httpSession;
 
     /**
      * Produces an authenticated {@link LoggedInUser} for use in CDI Beans.
@@ -54,8 +52,7 @@ public class SecurityUtil implements Serializable {
         }
     }
 
-    public static void setLoggedInUser(
-            final HttpSession httpSession, final LoggedInUser loggedInUser) {
+    public static void setLoggedInUser(final HttpSession httpSession, final LoggedInUser loggedInUser) {
         httpSession.setAttribute(SecurityUtil.LOGGED_IN_USER_SESSION_ATTRIBUTE, loggedInUser);
     }
 
